--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alatsi&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <title>My Works</title>
 </head>
 <body>
@@ -38,9 +42,47 @@
            </div>
         </section>
            <section class="section2">
-                <div class="top">
-     	            <h1>25 years experience in design</h1>
+               <div class="top">
+                     <h1>25 years experience in design</h1>
                 </div>
+                <div class="buttom">
+                    <h3>Content</h3>
+               <ul>
+                    <li>+ Content Development </li>
+                    <li>+ Curation</li>
+                    <li>+ Copywriting </li>
+                    <li>+ Animation</li>
+                    <li>+ Film</li>
+                    <li>+ Social Media</li>
+               </ul>
+          </div>
+          <div>
+               <h3>Branding</h3>
+               <ul>
+                    <li>+ Identity Design </li>
+                    <li>+ Design System</li>
+                    <li>+ Art Direction </li>
+                    <li>+ Print</li>
+                    <li>+ Packaging</li>
+                    <li>+ Books</li>
+                    <li>+ Activation</li>
+                    <li>+ Campaign</li>
+               </ul>
+          </div>
+             <div>
+               <h3>Digital</h3>
+               <ul>
+                    <li>+ Information Architecture </li>
+                    <li>+ Interface Design</li>
+                    <li>+ User Experience</li>
+                    <li>+ Data Visualization</li>
+                    <li>+ Website Design</li>
+                    <li>+ Mobile Design</li>
+                    <li>+ Digital Experience</li>
+               </ul>
+          </div>
+     </div>
+
            </section>
  
 </body>
