--- a/index.html
+++ b/index.html
@@ -1,89 +1,105 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alatsi&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-<title>My Works</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alatsi&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <title>My Works</title>
 </head>
+
 <body>
 
     <header>
-        <img src="./images/default-logo.png" alt="Logo" class="logo">   
+        <img src="./images/default-logo.png" alt="Logo" class="logo">
         <i class="fa-solid fa-bars"></i>
     </header>
-        <section class="hero">
-            <div class="left-box">
-                <div class="circle"></div>
-                <h1>My Works</h1>
-               
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.  <br> Excepteur sint occaecat cupidatat non proident.</p>
-                <br>
-                <div style="display: flex;">
-                    <p>Image by </p> <a href="#" style="position: relative; left:0.5%; top:15%; color:black;"> Freepik</a>
-                </div>
-                <button>VIEW ALL</button>
-            </div>
-        
-           <div class ="right-box">
-                <img src="./images/OT12YY1-min.png" alt="Image">
-            </div>
-           </div>
-        </section>
-           <section class="section2">
-               <div class="top">
-                     <h1>25 years experience in design</h1>
-                </div>
-                <div class="buttom">
-                    <h3>Content</h3>
-               <ul>
-                    <li>+ Content Development </li>
-                    <li>+ Curation</li>
-                    <li>+ Copywriting </li>
-                    <li>+ Animation</li>
-                    <li>+ Film</li>
-                    <li>+ Social Media</li>
-               </ul>
-          </div>
-          <div>
-               <h3>Branding</h3>
-               <ul>
-                    <li>+ Identity Design </li>
-                    <li>+ Design System</li>
-                    <li>+ Art Direction </li>
-                    <li>+ Print</li>
-                    <li>+ Packaging</li>
-                    <li>+ Books</li>
-                    <li>+ Activation</li>
-                    <li>+ Campaign</li>
-               </ul>
-          </div>
-             <div>
-               <h3>Digital</h3>
-               <ul>
-                    <li>+ Information Architecture </li>
-                    <li>+ Interface Design</li>
-                    <li>+ User Experience</li>
-                    <li>+ Data Visualization</li>
-                    <li>+ Website Design</li>
-                    <li>+ Mobile Design</li>
-                    <li>+ Digital Experience</li>
-               </ul>
-          </div>
-     </div>
+    <section class="hero">
+        <div class="left-box">
+            <div class="circle"></div>
+            <h1>My Works</h1>
 
-           </section>
- 
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                <br> Excepteur sint occaecat cupidatat non proident.
+            </p>
+            <br>
+            <div style="display: flex;">
+                <p>Image by </p> <a href="#" style="position: relative; left:0.5%; top:15%; color:black;"> Freepik</a>
+            </div>
+            <button>VIEW ALL</button>
+        </div>
+
+        <div class="right-box">
+            <img src="./images/OT12YY1-min.png" alt="Image">
+        </div>
+        </div>
+    </section>
+    <section class="section2">
+        <div class="top">
+            <h1>25 years experience in design</h1>
+        </div>
+        <div class="buttom">
+            <div>
+                <h3>Content</h3>
+                <br>
+                <ul>
+                    <li> <img class="plusIcon" src="./images/plus.svg"> Content Development </li>
+                    <li> <img class="plusIcon" src="./images/plus.svg"> Curation</li>
+                    <li> <img class="plusIcon" src="./images/plus.svg"> Copywriting </li>
+                    <li> <img class="plusIcon" src="./images/plus.svg"> Animation</li>
+                    <li> <img class="plusIcon" src="./images/plus.svg"> Film</li>
+                    <li> <img class="plusIcon" src="./images/plus.svg"> Social Media</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Branding</h3>
+                  <br>
+                <ul>
+                    <li><img class="plusIcon" src="./images/plus.svg"> Identity Design </li>
+                    <li><img class="plusIcon" src="./images/plus.svg"> Design System</li>
+                    <li><img class="plusIcon" src="./images/plus.svg"> Art Direction </li>
+                    <li><img class="plusIcon" src="./images/plus.svg"> Print</li>
+                    <li><img class="plusIcon" src="./images/plus.svg"> Packaging</li>
+                    <li><img class="plusIcon" src="./images/plus.svg"> Books</li>
+                    <li><img class="plusIcon" src="./images/plus.svg"> Activation</li>
+                    <li><img class="plusIcon" src="./images/plus.svg"> Campaign</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Digital</h3>
+                  <br>
+                <ul>
+                    <li><img class="plusIcon" src="./images/plus.svg"> Information Architecture </li>
+                    <li><img class="plusIcon" src="./images/plus.svg"> Interface Design</li>
+                    <li><img class="plusIcon" src="./images/plus.svg"> User Experience</li>
+                    <li><img class="plusIcon" src="./images/plus.svg"> Data Visualization</li>
+                    <li><img class="plusIcon" src="./images/plus.svg"> Website Design</li>
+                    <li><img class="plusIcon" src="./images/plus.svg"> Mobile Design</li>
+                    <li><img class="plusIcon" src="./images/plus.svg"> Digital Experience</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
 </body>
+
 </html>
